--- a/yhio/Makefile
+++ b/yhio/Makefile
@@ -3,6 +3,7 @@ HDF5Lib  = -lhdf5_cpp -l hdf5
 .SUFFIXES:	.i .cc .c .so .o _wrap.o .py
 .PHONY:	swig
 
+IncludeDirs = -I ~/script/
 BoostLib  = -lboost_program_options -lboost_iostreams
 
 cxx_targets	= AbstractMatrixFileWalker
@@ -20,13 +21,13 @@ $(cxx_targets):	%:	%.o
 	-$(cxx_compiler) $< $(cxx_flags) -o $@ $(BoostLib)
 
 .cc.o:
-	$(cxx_compiler) $< $(cxx_flags) -c -o $@
+	$(cxx_compiler) $< $(cxx_flags) $(IncludeDirs) -c -o $@
 
 $(c_targets):	%:	%.o
 	$(c_compiler) $< $(c_flags) -o $@
 
 .c.o:
-	$(c_compiler) $< $(c_flags) -c -o $@
+	$(c_compiler) $< $(c_flags) $(IncludeDirs) -c -o $@
 
 
 clean:
