add one more target
shareLibTargets	= AbstractMatrixFileWalker.so

--- a/yhio/Makefile
+++ b/yhio/Makefile
@@ -2,6 +2,6 @@
 cxx_targets	= AbstractMatrixFileWalker
 cxxLinkFlags 	= $(BoostLib)
 c_targets	= 
-
+shareLibTargets	= AbstractMatrixFileWalker.so
 
 include ../Makefile.common
