--- a/Makefile.common
+++ b/Makefile.common
@@ -6,34 +6,45 @@ IncludeDirs = -I ~/script/
 BoostLib  = -lboost_program_options -lboost_iostreams
 HDF5Lib  = -lhdf5_cpp -lhdf5 
 
-## cxx_targets, cxxLinkFlags, c_targets, cLinkFlags, extraTargets will be defined in child Makefiles 
-#cxx_targets	= 
-cxx_flags	= -O2
-cxx_compiler	= g++
-#cxxLinkFlags	= 
+## CXXTARGETS, CXXLDFLAGS, CTARGETS, CLDFLAGS, ExtraTargets will be defined in child Makefiles 
+#CXXTARGETS	= 
+CXXFLAGS	= -fPIC -O2
+CXXCOMPILER	= g++
+#CXXLDFLAGS	= 
 
-#c_targets	= 
-c_flags		= -O2
-c_compiler	= gcc
-#cLinkFlags 	=
+#CTARGETS	= 
+CFLAGS		= -fPIC -O2
+CCOMPILER	= gcc
+#CLDFLAGS	=
 
-#extraTargets
+#SharedLibTargets	=
+SharedLibFlags	= -shared -fPIC
 
-all:	$(cxx_targets) $(c_targets) $(extraTargets) subdirs
+#ExtraTargets
+
+all:	$(CXXTARGETS) $(CTARGETS) $(SharedLibTargets) $(ExtraTargets) subdirs
 
 
-$(cxx_targets):	%:	%.o
-	-$(cxx_compiler) $< $(cxx_flags) -o $@ $(cxxLinkFlags)
+$(SharedLibTargets):	%.so:	%.o
+	-$(CXXCOMPILER) $< $(SharedLibFlags) -o $@ $(CXXLDFLAGS)
+
+#.o.so:
+#	-$(CXXCOMPILER) $< $(SharedLibFlags) -o $@ $(CXXLDFLAGS)
+
+$(CXXTARGETS):	%:	%.o
+	-$(CXXCOMPILER) $< $(CXXFLAGS) -o $@ $(CXXLDFLAGS)
 
 .cc.o:
-	$(cxx_compiler) $< $(cxx_flags) $(IncludeDirs) -c -o $@
+	$(CXXCOMPILER) $< $(CXXFLAGS) $(IncludeDirs) -c -o $@
 
-$(c_targets):	%:	%.o
-	$(c_compiler) $< $(c_flags) -o $@ $(cLinkFlags)
+$(CTARGETS):	%:	%.o
+	$(CCOMPILER) $< $(CFLAGS) -o $@ $(CLDFLAGS)
 
 .c.o:
-	$(c_compiler) $< $(c_flags) $(IncludeDirs) -c -o $@
+	$(CCOMPILER) $< $(CFLAGS) $(IncludeDirs) -c -o $@
 
+%.c: 	$(wildcard ~/script/pymodule/include/*.h)
+%.cc: 	$(wildcard ~/script/pymodule/include/*.h)
 
 subdirs:
 	for dir in $(SUBDIRS); do \
@@ -46,4 +57,4 @@ clean_subdirs:
 	done
 
 clean:	clean_subdirs
-	-rm -f *.o $(cxx_targets) $(c_targets) $(extraTargets)
+	-rm -f *.o $(CXXTARGETS) $(CTARGETS) $(ExtraTargets) $(SharedLibTargets)
