--- a/pegasus/mapper/Makefile
+++ b/pegasus/mapper/Makefile
@@ -9,6 +9,7 @@ CalculateMedianMeanOfInputColumn:	%:	%.o
 	-$(CXXCOMPILER) $< $(CXXFLAGS) -lboost_program_options -lboost_iostreams -larmadillo -o $@
 
 
+SRCS	= CalculateColCorBetweenTwoHDF5.cc FindMaxLDBetweenPeakAndEachLocus.cc CalculateMedianMeanOfInputColumn.cc
 
 include ../../Makefile.common
 #all:	$(CXXTARGETS) $(CTARGETS) CalculateColCorBetweenTwoHDF5
