--- a/pegasus/mapper/extractor/Makefile
+++ b/pegasus/mapper/extractor/Makefile
@@ -6,6 +6,8 @@ CTARGETS	=
 ExtraTargets	= SelectRowsFromMatrixCC
 SharedLibTargets	= ~/script/pymodule/yhio/AbstractMatrixFileWalkerCC.so
 
+SRCS	= SelectRowsFromMatrixCC.cc
+
 SelectRowsFromMatrixCC:	%:	%.o $(SharedLibTargets)
 	-$(CXXCOMPILER) $< $(SharedLibTargets) $(CXXFLAGS) $(CXXLDFLAGS) -o $@
 
