--- a/yhio/Makefile
+++ b/yhio/Makefile
@@ -4,4 +4,6 @@ CXXLDFLAGS 	= $(BoostLib)
 CTARGETS	= 
 SharedLibTargets	= AbstractMatrixFileWalkerCC.so
 
+SRCS	= AbstractMatrixFileWalkerCC.cc
+
 include ../Makefile.common
