--- a/pegasus/mapper/Makefile
+++ b/pegasus/mapper/Makefile
@@ -1,13 +1,13 @@
 SUBDIRS 	= extractor
-CXXTARGETS	= CalculateColCorBetweenTwoHDF5 FindMaxLDBetweenPeakAndEachLocus
+CXXStaticTargets	= CalculateColCorBetweenTwoHDF5 FindMaxLDBetweenPeakAndEachLocus
 CXXLDFLAGS 	= $(HDF5Lib)
 CTARGETS	= 
 
 ExtraTargets	= CalculateMedianMeanOfInputColumn
 
 CalculateMedianMeanOfInputColumn:	%:	%.o
-	-$(CXXCOMPILER) $< $(CXXFLAGS) -lboost_program_options -lboost_iostreams -larmadillo -o $@
-
+	-$(CXXCOMPILER) $< $(CXXFLAGS) -o $@ $(StaticStartFlags) -lboost_program_options -lboost_iostreams $(StaticEndFlags) -larmadillo
+#2015.03.13 didn't find static armadillo in ubuntu libraries
 
 SRCS	= CalculateColCorBetweenTwoHDF5.cc FindMaxLDBetweenPeakAndEachLocus.cc CalculateMedianMeanOfInputColumn.cc
 
