--- a/reducer/Makefile
+++ b/reducer/Makefile
@@ -13,4 +13,4 @@ SRCS	= ReduceSameChromosomeAlignmentDepthFiles.cc
 ReduceSameChromosomeAlignmentDepthFiles:	%:	%.o $(SharedLibTargets)
 	-$(CXXCOMPILER) $< $(SharedLibTargets) $(CXXFLAGS) $(CXXLDFLAGS) -o $@
 
-include ../../Makefile.common
+include ../Makefile.common
