--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 **/*.pyc
 **/.*.swp
 **/__pycache__
+*egg-info
 .autotools
 .cproject
 .depend
@@ -11,4 +12,6 @@
 .tags
 .tags1
 .vscode
+build
 cmake-build-debug
+MANIFEST.in
