bugfixes to stop if any error in Makefile compilation.

--- a/GADA/Makefile
+++ b/GADA/Makefile
@@ -19,23 +19,23 @@ all:	depend GADA $(BoostPythonTarget)
 # for boost.python target(shared libraries)
 $(BoostPythonTarget):	%.so:	GADA_shared.o BaseGADA_shared.o
 	#2013.08.16 -l... should be put in the last. If they are put in front of input files, they will be ignored!
-	-$(CXXCOMPILER) $< BaseGADA_shared.o -DGADALib -o $@ $(SharedLibFlags) -lm $(BoostPythonLib)
+	$(CXXCOMPILER) $< BaseGADA_shared.o -DGADALib -o $@ $(SharedLibFlags) -lm $(BoostPythonLib)
 
 GADA_shared.o:	GADA.cc
-	-$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) -DGADALib $(IncludeDirs) $(SharedLibFlags)
+	$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) -DGADALib $(IncludeDirs) $(SharedLibFlags)
 BaseGADA_shared.o:	BaseGADA.cc
-	-$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) -DGADALib $(IncludeDirs) $(SharedLibFlags)
+	$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) -DGADALib $(IncludeDirs) $(SharedLibFlags)
 
 .cc.o:
-	-$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) $(IncludeDirs) -DGADABIN $(SharedLibFlags)
+	$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) $(IncludeDirs) -DGADABIN $(SharedLibFlags)
 
 .c.o:
-	-$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) $(IncludeDirs) -DGADABIN $(SharedLibFlags)
+	$(CXXCOMPILER) $< -c -o $@ $(CXXFLAGS) $(IncludeDirs) -DGADABIN $(SharedLibFlags)
 
 
 GADA:	GADA.o BaseGADA.o BaseGADA.h consoledefines.h
 	# `python-config --libs` and $(BoostPythonLib) would be needed if boost.python is used. However, -DGADABIN renders those code off. 
-	-$(CXXCOMPILER) GADA.o BaseGADA.o -o GADA $(CXXFLAGS) $(IncludeDirs) -DGADABIN -lm $(CXXLDFLAGS)
+	$(CXXCOMPILER) GADA.o BaseGADA.o -o GADA $(CXXFLAGS) $(IncludeDirs) -DGADABIN -lm $(CXXLDFLAGS)
 
 depend: .depend
 
