--- a/io/Makefile
+++ b/io/Makefile
@@ -7,3 +7,5 @@ SharedLibTargets	= AbstractMatrixFileWalkerCC.so
 SRCS	= AbstractMatrixFileWalkerCC.cc
 
 include ../Makefile.common
+#overwrite Makefile.common
+IncludeDirs	= -I`readlink -f ..`
