--- a/polymorphism/qc/Makefile
+++ b/polymorphism/qc/Makefile
@@ -5,12 +5,10 @@ CTARGETS	=
 
 #ExtraTargets	= CheckTwoVCFOverlapCC
 SharedLibTargets	= ../../io/AbstractMatrixFileWalkerCC.so 
-
 #CheckTwoVCFOverlapCC:	%:	%.o $(SharedLibTargets)
 #	-$(CXXCOMPILER) $< ~/script/vcflib/libvcf.a $(SharedLibTargets) $(CXXFLAGS) -o $@ $(CXXLDFLAGS)
-
-
 #SRCS	= CheckTwoVCFOverlapCC.cc
-
 include ../../Makefile.common
 #all:	$(CXXTARGETS) $(CTARGETS) CalculateColCorBetweenTwoHDF5
+#overwrite Makefile.common
+IncludeDirs	= -I`readlink -f ../..`
