--- a/reducer/Makefile
+++ b/reducer/Makefile
@@ -4,8 +4,6 @@ CXXLDFLAGS 	= $(BoostLib)
 CTARGETS	= 
 
 ExtraTargets = ReduceSameChromosomeAlignmentDepthFiles
-
-
 SharedLibTargets = ../io/AbstractMatrixFileWalkerCC.so
 
 SRCS = ReduceSameChromosomeAlignmentDepthFiles.cc
@@ -14,3 +12,5 @@ ReduceSameChromosomeAlignmentDepthFiles:	%:	%.o $(SharedLibTargets)
 	-$(CXXCOMPILER) $< $(SharedLibTargets) $(CXXFLAGS) $(CXXLDFLAGS) -o $@
 
 include ../Makefile.common
+#overwrite Makefile.common
+IncludeDirs	= -I`readlink -f ..`
