--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,11 @@ test_GADA:
     - pwd
     - cd GADA && make
     - ./testGADA.py -i input.txt -o output.tsv
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - GADA/output.tsv
 
 uninstall:
   stage: uninstall
