--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ after_script:
 stages:
   - install
   - check_version
-  - test_help
-  - test_GADA
+  - output_help
+  - test_run
   - uninstall
   - compile
 
@@ -27,29 +27,29 @@ check_version:
     - echo "Checking the version of the installed package"
     - python3 -c "import palos; print(palos.version)"
 
-test_SunsetDB:
-  stage: test_help
+SunsetDB_h:
+  stage: output_help
   script:
     - echo "Testing if SunsetDB.py can print help."
     - pwd
     - ./palos/db/SunsetDB.py -h
 
-test_ImportSeq:
-  stage: test_help
+ImportSeq_h:
+  stage: output_help
   script:
     - echo "Testing if ImportIndividualSequence2DB.py can print help."
     - pwd
     - ./db/import/ImportIndividualSequence2DB.py -h
 
-test_RegisterDB:
-  stage: test_help
+RegisterDB_h:
+  stage: output_help
   script:
     - echo "Testing if RegisterAndMoveSplitSequenceFiles.py can print help."
     - pwd
     - ./db/import/RegisterAndMoveSplitSequenceFiles.py -h
 
-test_GADA:
-  stage: test_GADA
+GADA:
+  stage: test_run
   script:
     - echo "Compiling GADA and test-run its Python2 module ... "
     - pwd
@@ -60,6 +60,20 @@ test_GADA:
     expire_in: 3 mos
     paths:
     - GADA/output.tsv
+
+CountReadsWorkflow:
+  stage: test_run
+  script:
+    - echo "Output a CountReadsWorkflow DAG ... "
+    - pwd
+    - ./ngs/qc/CountReadsWorkflow.py -i 1-800 -j condor -l condor
+      -o CountReads.ISQ1-800.xml --hostname pdc
+      --dbname pmdb -k sunset --commit -u sunset_r -p yfishLabSunset
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - CountReads.ISQ1-800.xml
 
 uninstall:
   stage: uninstall
