--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ CountReadsWorkflow:
     - echo "Output a CountReadsWorkflow DAG ... "
     - pwd
     - ./ngs/qc/CountReadsWorkflow.py -i 1-800 -j condor -l condor
-      -o CountReads.ISQ1-800.xml --hostname pdc
+      -o CountReads.ISQ1-800.xml --ref_ind_seq_id 633 --hostname pdc
       --dbname pmdb -k sunset --commit -u sunset_r -p yfishLabSunset
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
