--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,24 @@ CountReadsWorkflow:
     paths:
     - CountReads.ISQ790-800.xml
 
+
+ShortRead2Alignment:
+  stage: test_run
+  script:
+    - echo "Output a ShortRead2Alignment DAG ... "
+    - pwd
+    - ./ngs/alignment/ShortRead2Alignment.py --ind_seq_id_ls 787-811
+      -a 633 -o Alignment_isq_787_811_vs_633.xml -l condor
+      --no_of_aln_threads 8 --tmpDir /y/scratch/tmp/huangyu/
+      -z pdc --dbname pmdb --schema sunset
+      -u sunset_r -p yfishLabSunset
+
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - Alignment_isq_787_811_vs_633.xml
+
 uninstall:
   stage: uninstall
   script:
