--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ ShortRead2Alignment:
       --home_path /y/home/huangyu --pymodulePath `pwd`
       --no_of_aln_threads 8 --tmpDir /y/scratch/tmp/huangyu/
       -z pdc --dbname pmdb --schema sunset
-      -u sunset_r -p yfishLabSunset || echo "hello"
+      -u sunset_r -p yfishLabSunset
 
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
