--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,10 +101,10 @@ InspectAlignmentPipeline:
     - echo "Output a InspectAlignmentPipeline DAG ... "
     - pwd
     #InspectAlignmentPipeline needs some compiled binaries
-    - pushd GADA && make && popd
-    - pushd io && make all && popd
-    - pushd mapper && make all && popd
-    - pushd reducer && make all && popd
+    - pushd GADA && make; popd
+    - pushd io && make all; popd
+    - pushd mapper && make all; popd
+    - pushd reducer && make all; popd
     - ./ngs/qc/InspectAlignmentPipeline.py -i 2112-2132 -l condor -z pdc
       --dbname pmdb --schema sunset -u sunset_r -p yfishLabSunset
       --home_path /y/home/huangyu --pymodulePath `pwd`
@@ -126,7 +126,7 @@ compile:
   script:
     - echo "Compile other C++ programs and modules ... "
     - pwd
-    - pushd io && make all && popd
-    - pushd mapper && make all && popd
-    - pushd polymorphism && make all && popd
-    - pushd reducer && make all && popd
+    - pushd io && make all; popd
+    - pushd mapper && make all; popd
+    - pushd polymorphism && make all; popd
+    - pushd reducer && make all; popd
