--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,6 @@ cmake-build-debug
 dist
 io/AbstractMatrixFileWalkerCC
 mapper/extractor/SelectRowsFromMatrixCC
+mapper/CalculateMedianMeanOfInputColumn
 reducer/ReduceSameChromosomeAlignmentDepthFiles
+
