--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ cmake-build-debug
 dist
 io/AbstractMatrixFileWalkerCC
 mapper/extractor/SelectRowsFromMatrixCC
+mapper/CalculateColCorBetweenTwoHDF5
 mapper/CalculateMedianMeanOfInputColumn
 reducer/ReduceSameChromosomeAlignmentDepthFiles
 
