ignore io/AbstractMatrixFileWalkerCC.a

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,9 @@ build
 cmake-build-debug
 dist
 io/AbstractMatrixFileWalkerCC
+io/AbstractMatrixFileWalkerCC.a
 mapper/extractor/SelectRowsFromMatrixCC
 mapper/CalculateColCorBetweenTwoHDF5
 mapper/CalculateMedianMeanOfInputColumn
 reducer/ReduceSameChromosomeAlignmentDepthFiles
-
 mapper/FindMaxLDBetweenPeakAndEachLocus
